# l9-ci-debt-lsp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGE_SUMMARY.md  MANIFEST.md  MANIFEST.sha256  PR_BODY.md  README.md  ROADMAP.md  RUNBOOK.md  VALIDATION.md  VALIDATION_REPORT.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.cursor/: environment.json
.github/workflows/: ci.yml  phase-1-boundary.yml  phase-2-pack-protocol.yml  phase-3-incremental-analysis.yml  phase-4-diagnostics.yml  phase-5-code-actions.yml  phase-6-final-telemetry.yml  publish-extension.yml
.l9/: code-action-contract.yaml  compatibility-policy.yaml  defense-consumer-contract.yaml  diagnostic-contract.yaml  final-acceptance-gates.yaml  incremental-analysis-contract.yaml  ownership.yaml  pack-protocol-contract.yaml  repo-spec.yaml  sdk-schema-registry.json  telemetry-contract.yaml
.l9/corpus/: manifest.json
docs/: COMPILED_RULE_VALIDATION.md  DIAGNOSTICS_AND_CODE_ACTIONS.md  RULE_REFRESH.md
docs/adr/: ADR-001-corpus-highway.md
docs/source/: phase-1-lsp-p0.md  phase-2-lsp-p1.md  phase-3-lsp-p2.md  phase-4-lsp-p3.md  phase-5-lsp-p4.md  phase-6-lsp-p5.md
fixtures/: api-drift.py  bad-workflow.yml  doctrine-violation.py  expected_diagnostics.json  gha_missing_install_step.yml  gha_missing_pythonpath.yml  good-workflow.yml  pyproject_missing_dep.toml
rules/: compiled_rules.json  compiled_rules.lock.json  compiled_rules.schema.json  message_templates.yaml
schemas/lsp/: activation-history-entry.schema.json  activation-pointer.schema.json  analysis-request.schema.json  analysis-result.schema.json  bounded-code-action.schema.json  canonical-diagnostic.schema.json  code-action-provenance.schema.json  defense-pack-consumer.schema.json  diagnostic-publication.schema.json  document-overlay.schema.json  installation-record.schema.json  pack-compatibility-result.schema.json  pack-descriptor.schema.json  pack-installation-state.schema.json  publication-manifest.schema.json  quarantine-record.schema.json  quick-fix-template.schema.json  retired-pack-registry.schema.json  runtime-health.schema.json  runtime-rule.schema.json  sdk-finding-consumer.schema.json  server-capabilities.schema.json  telemetry-delivery-state.schema.json  telemetry-event.schema.json  telemetry-health.schema.json  telemetry-policy.schema.json  trusted-key-registry.schema.json  workspace-state.schema.json
server/: code_actions.py  corpus_compiler.py  corpus_refresh.py  diagnostics.py  pyproject.toml  refresh_rules.py  rules_loader.py  server.py  topology_detector.py  validate_compiled_rules.py
src/: extension.ts
src/commands/: applyQuickFix.ts  openFindingDocs.ts  refreshCorpus.ts
tests/: test_code_actions.py  test_compiled_rules_validation.py  test_diagnostics.py  test_extension_smoke.ts  test_rule_compilation.py
vscode/: package.json
(+157 files in other folders)
