[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "l9-ci-debt-lsp-server"
version = "0.1.0"
description = "L9 CI-debt LSP — pygls language server + rule engine for IDE-time CI debt prevention"
requires-python = ">=3.11"
dependencies = [
    "pygls>=1.3",
    "jsonschema>=4.21",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
l9-lsp-server = "server.server:main"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
