[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "l9-ci-debt-lsp-server"
version = "0.1.0"
description = "pygls LSP server for L9 CI-debt diagnostics and code actions"
requires-python = ">=3.11"
dependencies = [
    "pygls>=1.3",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tomllib; python_version < '3.11'",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
addopts = "-q --tb=short"
